# rust_hamilton

./: Cargo.toml  LICENSE  rustfmt.toml
benches/: vec4.rs
src/: angle.rs  bounds.rs  color.rs  error.rs  extent.rs  index.rs  internal_macro.rs  ivec2.rs  ivec3.rs  lerp.rs  lib.rs  mat3.rs  mat4.rs  nearly_equal.rs  plane.rs  projection.rs  quat.rs  ray.rs  sphere.rs  spherical.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs  wrappable.rs
