[package]
name = "hamilton"
version = "0.1.0"
authors = ["Jongmin Yun <jmyundev@gmail.com>"]
edition = "2018"
description = "Math library"
license = "GPL-3.0-or-later"
publish = "false"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "hamilton"
path = "src/lib.rs"
doctest = true
bench = true
doc = true
haress = true
edition = "2018"
crate-type = ["lib"]

#[[bench]]
#name = "bench"
#harness = true

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
overflow-checks = true
panic = "abort"

[profile.test]
opt-level = 0
debug = 2
lto = false
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = true


