[package]
name = "hamilton"
version = "0.1.0"
authors = ["Jongmin Yun <jmyundev@gmail.com>"]
edition = "2018"
description = "Math library"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
rand = "^0.8.3"
criterion = "^0.3"

[lib]
name = "hamilton"
path = "src/lib.rs"
doctest = true
bench = true
doc = true
harness = true
edition = "2018"
crate-type = ["lib"]

[[bench]]
name = "vec4"
harness = false

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
overflow-checks = true
panic = "abort"

[profile.test]
opt-level = 0
debug = 2
lto = false
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = true


